fix blurry images

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -3,18 +3,19 @@
 @tailwind components;
 
 @tailwind utilities;
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,600;0,700;0,800;1,300;1,400;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,600;0,700;0,800;1,300;1,400;1,900&display=swap");
 
 .full-bleed {
-	left: 50%;
-	margin-left: -50vw;
-	margin-right: -50vw;
-	max-width: 100vw;
-	position: relative;
-	right: 50%;
-	width: 100vw;
+  left: 50%;
+  margin-left: -50vw;
+  margin-right: -50vw;
+  max-width: 100vw;
+  position: relative;
+  right: 50%;
+  width: 100vw;
 }
 
 body {
-	cursor: url('/PointerFinger.svg') 24 24, auto;
+  cursor: url("/PointerFinger.svg") 24 24, auto;
+  image-rendering: -webkit-optimize-contrast;
 }
